# OpenDove

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/skills/pr-cycle/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
.opendove/: PHASE1.md  WORKFLOW.md
docs/: README.md  architecture.md  development-workflow.md  glossary.md  principles.md  product.md  roadmap.md  runbook.md  vision.md
docs/architecture/: tech_strategy.md  workflow.md
docs/temp/: initial_thoughts
examples/: sample_task.md
migrations/: env.py
migrations/versions/: 9b2c9da2df1c_initial_schema_projects_and_tasks.py  a1b2c3d4e5f6_add_task_dag_fields.py  b2c3d4e5f6a7_add_project_paused_flag.py  c3d4e5f6a7b8_add_task_execution_log.py
prompts/: README.md  ava.md  developer.md  lead_architect.md  product_manager.md  project_manager.md
scripts/: dev.sh
src/opendove/: __init__.py  config.py  logging_config.py  main.py
src/opendove/agents/: agent_factory.py  ava.py  ava_checks.py  base.py  developer.py  lead_architect.py  llm_factory.py  product_manager.py  project_manager.py  schemas.py  tool_config.py  tool_registry.py  tools.py
src/opendove/api/: app.py  dependencies.py  schemas.py
src/opendove/cli/: client.py  main.py
src/opendove/git/: manager.py
src/opendove/github/: client.py
src/opendove/models/: project.py  task.py
src/opendove/notifications/: base.py  email_backend.py  factory.py  service.py
src/opendove/orchestration/: dispatcher.py  graph.py  outer_graph.py  task_runner.py  worker.py
src/opendove/roles/: __init__.py  ava.py  base.py  developer.py  lead_architect.py  product_manager.py  (+1 more)
tests/integration/: conftest.py  test_api_pipeline.py  test_inner_graph_e2e.py  test_postgres_stores.py  test_task_runner.py
tests/unit/: test_agent_llm_calls.py  test_api.py  test_ava_agent.py  test_ava_checks.py  test_base_agent_tools.py  test_cli.py  test_dispatcher.py  test_git_manager.py  test_graph.py  test_inner_graph_architect_retry.py  test_issue_syncer.py  test_llm_factory.py  test_llm_retry.py  test_notifications.py  test_outer_graph.py  test_pjm_priority_queue.py  test_task_dag.py  test_task_models.py  test_tool_config.py  test_tool_registry.py  test_validation_contracts.py
(+18 files in other folders)
