[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendove"
version = "0.1.0"
description = "Direction-aligned multi-agent software development system."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Deyi" }]
dependencies = [
  "alembic>=1.13.0",
  "langgraph>=0.2.0",
  "langchain-anthropic>=0.3.0",
  "langchain-mcp-adapters>=0.1.0",
  "langchain-google-genai>=2.0.0",
  "langchain-openai>=0.3.0",
  "mcp>=1.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.4.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks tests that require a running PostgreSQL instance"]

[tool.ruff]
line-length = 100
target-version = "py311"
